compiler/tests/success/subarrays/risc-v/stack_ptr.jazz
// spill and unspill of reg ptr

export fn main (reg ptr u32[2] r) -> reg u32 {
  stack ptr u32[2] s;
  reg u32 res;

  s = r; // STORE
  r = s; // LOAD

  res = r[0];

  return res;
}
