compiler/tests/fail/stack_allocation/x86-64/unscaled_access.jazz
// FIXME: double check
export fn main (reg u64 i) -> reg u64 {
  stack u32[4] s;
  reg ptr u64[2] r;

  r = s.[i:4];
  reg u64 res = r[2];

  return res;
}
